[package]
name = "this-isnt-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
env_logger = "0.9.0"
future-utils = "0.12.1"
futures = "0.3.23"
log = "0.4.17"
tokio = { version = "1.20.1", features = ["full"] }
tokio-tungstenite = "0.17.2"
